[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent.fmaa1-1.fna.fbcdn.net/v/t1.0-1/p160x160/27545552_972358942917654_117133998029213244_n.jpg?oh=0d62b7d376440a24b9d19d4a6c9032c7&oe=5B495164"class="img-medium"/>
+            <img src=ww.facebook.com/photo.php?fbid=988088004678081&set=a.104176949735862.10089.100004306718592&type=3&source=11&referrer_profile_id=100004306718592/>
         </div>
         <br>
         <div class="center text-big bold">
