--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src=ww.facebook.com/photo.php?fbid=988088004678081&set=a.104176949735862.10089.100004306718592&type=3&source=11&referrer_profile_id=100004306718592/>
+            <img src=https://www.facebook.com/photo.php?fbid=988088004678081&set=a.104176949735862.10089.100004306718592&type=3&theater/>
         </div>
         <br>
         <div class="center text-big bold">
