[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src=https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/28468478_988088004678081_6082055317353527599_n.jpg?_nc_cat=0&oh=06d04d1393ab59fa610f9f00de918a33&oe=5B871294 />
+            <img src=https://www.facebook.com/photo.php?fbid=988088004678081&set=a.104176949735862.10089.100004306718592&type=3&source=11&referrer_profile_id=100004306718592 />
         </div>
         <br>
         <div class="center text-big bold">
