[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src=https://www.facebook.com/photo.php?fbid=988088004678081&set=a.104176949735862.10089.100004306718592&type=3&source=11&referrer_profile_id=100004306718592 />
+            <img src=https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/22549493_906141062872776_2921202082375250564_n.jpg?_nc_cat=0&oh=dbdd0d81c0d74b8fbb29aa910b9afe59&oe=5B89EC58 />
         </div>
         <br>
         <div class="center text-big bold">
