--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,16 @@
+<!doctype html/>
 <html>
+    <title>
+       article-one jagadeesh aradhyula.
+    </title>
+    <body>
+    <head>
+      <h1>
+          personal details
+      </h1>
+      <p>
+          this is aradhyula jagadeesh  and this is my firest web page.
+      </p>
+    </head>
+    </body>
 </html>
