[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,16 +1,17 @@
 <!doctype html/>
 <html>
-    <title>
+    <head>
+         <title>
        article-one jagadeesh aradhyula.
     </title>
+    <o href="\" Home></o>
+    </head>
     <body>
-    <head>
       <h1>
           personal details
       </h1>
       <p>
           this is aradhyula jagadeesh  and this is my firest web page.
       </p>
-    </head>
     </body>
 </html>
