[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,14 +4,22 @@
          <title>
        article-one jagadeesh aradhyula.
     </title>
-    <o href="\" Home></o>
     </head>
     <body>
+        <div>
+         <o href="\" Home></o>
+         </div>
       <h1>
           personal details
       </h1>
       <p>
-          this is aradhyula jagadeesh  and this is my firest web page.
+          This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page.
+      </p>
+      <p>
+          This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page.
+      </p>
+      <p>
+          This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page.
       </p>
     </body>
 </html>
