[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,4 +1,3 @@
-<!doctype html/>
 <html>
     <head>
          <title>
@@ -7,7 +6,7 @@
     </head>
     <body>
         <div>
-         <o href="\" Home></o>
+         <o href="\"> Home</o>
          </div>
       <h1>
           personal details
