[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-         <link href="/" >Home </link> 
+         <a href="/" >Home </a> 
          </div>
       <h1>
           personal details
