--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,9 @@
          </div>
          <hr/>
          <div>
+             Article one
+         </div>
+         <div>
              may 16, 2018.
          </div>
       <h1>
