[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -14,7 +14,8 @@
          </h1>
          <div>
              may 16, 2018.
-    
+             </div>
+         <div> 
       <p>
           This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest <a href="https://en.wikipedia.org/wiki/Web_page" >web page </a>. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page.
       </p>
