[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+        article-two |Aradhyula jagadeesh.
+    </title>
+    </head>
+    <body>
+        <div>
+            <a href='/'> Home </a>
+        </div>
+        <hr/>
+        <div>
+            may 16,2018
+        </div>
+        <div>
+            This is  my second article of my first <a href="https://en.wikipedia.org/wiki/Web_page" >web page </a> 
+            </div>
+    </body>
 </html>
