--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,10 @@
         <br>
         <div class="center text-big bold">
            Hi! This is Jagadeesh and this is my first webapp.
-        </div>
+        </div
+        <script>
+        alert(" hi i am jagadeesh");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
