--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="center">
-            <img src=https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/22549493_906141062872776_2921202082375250564_n.jpg?_nc_cat=0&oh=dbdd0d81c0d74b8fbb29aa910b9afe59&oe=5B89EC58 />
+        <img src=https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/22549493_906141062872776_2921202082375250564_n.jpg?_nc_cat=0&oh=dbdd0d81c0d74b8fbb29aa910b9afe59&oe=5B89EC58 />
         </div>
         <br>
         <div class="center text-big bold">
            Hi! This is Jagadeesh and this is my first webapp.
-        </div
+        </div>
         <script>
         alert(" hi i am jagadeesh");
         </script>
