[imad-console] Updates ui/article-four.html

--- a/ui/article-four.html
+++ b/ui/article-four.html
@@ -1,2 +1,18 @@
 <html>
+    <head>
+        <title>
+            article-four jagadeesh aradhyula.
+        </title>
+    </head>
+    <body>
+        <h1>
+            personal details.
+            <div>
+                july 14,2018.
+            </div>
+        </h1>
+        <p>
+            This is aradhyula jagadeesh  and this is my first <a href="https://en.wikipedia.org/wiki/Web_page" >web page </a>. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my first web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest webpage. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page. This is aradhyula jagadeesh  and this is my firest web page.
+        </p>
+    </body>
 </html>
